Environment Transformers Added

--- a/ppo/Untitled.ipynb
+++ b/ppo/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from lib.common import mkdir\n",
     "#from lib.model import ActorCritic\n",
     "import lib.model as models\n",
+    "import lib.transforms as transforms\n",
     "from lib.multiprocessing_env import SubprocVecEnv\n",
     "\n",
     "\n",
@@ -56,12 +57,15 @@
     "        global NUM_TESTS\n",
     "        global TARGET_REWARD\n",
     "        global MODEL_NAME\n",
+    "        global MODEL_CLASS\n",
+    "        global TRANSFORM_NAME\n",
+    "        global TRANSFORM_CLASS\n",
     "\n",
     "        ENV_ID          = data.setdefault('env_id', 'RoboschoolHalfCheetah-v1')\n",
     "        NUM_INPUTS      = data.setdefault('num_inputs', 26)\n",
     "        NUM_OUTPUTS     = data.setdefault('num_outputs', 6)\n",
     "        NUM_ENVS        = data.setdefault('num_envs', 1)\n",
-    "        HIDDEN_SIZE     = data.setdefault('hidden_size', 256)\n",
+    "        HIDDEN_SIZE     = data.get('hidden_size', 256)\n",
     "        LEARNING_RATE   = data.setdefault('learning_rate', 1e-4)\n",
     "        GAMMA           = data.setdefault('gamma', 0.99)\n",
     "        GAE_LAMBDA      = data.setdefault('gae_lambda', 0.95)\n",
@@ -75,6 +79,9 @@
     "        NUM_TESTS       = data.setdefault('num_tests', 10)\n",
     "        TARGET_REWARD   = data.setdefault('target_reward', 2500)\n",
     "        MODEL_NAME      = data.setdefault('model_name', 'ActorCritic')\n",
+    "        MODEL_CLASS     = getattr(models, MODEL_NAME)\n",
+    "        TRANSFORM_NAME  = data.setdefault('transform_name', None)\n",
+    "        TRANSFORM_CLASS = getattr(transforms, TRANSFORM_NAME)\n",
     "\n",
     "        # Transformations\n",
     "        if isinstance(NUM_INPUTS, list): NUM_INPUTS = tuple(NUM_INPUTS)\n",
@@ -82,6 +89,7 @@
     "        json_file.seek(0)  # go to beggining of file\n",
     "        json.dump(data, json_file)  # write content\n",
     "        json_file.truncate()  # clear any tail of old content\n",
+    "\n",
     "\n",
     "\n",
     "def make_env(env_id):\n",
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
