--- a/ppo/Untitled.ipynb
+++ b/ppo/Untitled.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Based on https://github.com/higgsfield/RL-Adventure-2/blob/master/3.ppo.ipynb\n",
     "import argparse\n",
     "import math\n",
     "import os\n",
@@ -22,7 +21,6 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "from torch.distributions import Normal\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
     "from lib.common import mkdir\n",
@@ -30,7 +28,6 @@
     "import lib.model as models\n",
     "import lib.transforms as transforms\n",
     "from lib.multiprocessing_env import SubprocVecEnv\n",
-    "\n",
     "\n",
     "def setup(env_id):\n",
     "\n",
@@ -80,7 +77,7 @@
     "        TARGET_REWARD   = data.setdefault('target_reward', 2500)\n",
     "        MODEL_NAME      = data.setdefault('model_name', 'ActorCritic')\n",
     "        MODEL_CLASS     = getattr(models, MODEL_NAME)\n",
-    "        TRANSFORM_NAME  = data.setdefault('transform_name', None)\n",
+    "        TRANSFORM_NAME  = data.setdefault('transform_name', 'Identity')\n",
     "        TRANSFORM_CLASS = getattr(transforms, TRANSFORM_NAME)\n",
     "\n",
     "        # Transformations\n",
@@ -91,14 +88,14 @@
     "        json_file.truncate()  # clear any tail of old content\n",
     "\n",
     "\n",
-    "\n",
-    "def make_env(env_id):\n",
+    "def make_env(env_id, transform=None):\n",
     "    # returns a function which creates a single environment\n",
     "    def _thunk():\n",
     "        env = gym.make(env_id)\n",
+    "        if transform:\n",
+    "            env = transform(env)\n",
     "        return env\n",
     "    return _thunk\n",
-    "\n",
     "\n",
     "def test_env(env, model, device, deterministic=True):\n",
     "    state = env.reset()\n",
@@ -107,8 +104,15 @@
     "    while not done:\n",
     "        state = torch.FloatTensor(state).unsqueeze(0).to(device)\n",
     "        dist, _ = model(state)\n",
-    "        action = dist.mean.detach().cpu().numpy()[0] if deterministic \\\n",
-    "            else dist.sample().cpu().numpy()[0]\n",
+    "\n",
+    "        if isinstance(dist, torch.distributions.categorical.Categorical):\n",
+    "            action = np.argmax(dist.probs.detach().cpu().numpy()) if deterministic \\\n",
+    "                else int(m.sample().cpu().numpy())\n",
+    "\n",
+    "        elif isinstance(dist, torch.distributions.normal.Normal):\n",
+    "            action = dist.mean.detach().cpu().numpy()[0] if deterministic \\\n",
+    "                else dist.sample().cpu().numpy()[0]\n",
+    "        \n",
     "        next_state, reward, done, _ = env.step(action)\n",
     "        state = next_state\n",
     "        total_reward += reward\n",
@@ -193,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cuda\n",
+      "Device: cpu\n",
       "ActorCriticLSTM(\n",
-      "  (conv1): Conv2d(3, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "  (conv1): Conv2d(1, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
       "  (maxp1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  (conv2): Conv2d(32, 32, kernel_size=(5, 5), stride=(1, 1), padding=(1, 1))\n",
       "  (maxp2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
@@ -210,7 +214,7 @@
       "  (maxp3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  (conv4): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
       "  (maxp4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (lstm): LSTMCell(6912, 512)\n",
+      "  (lstm): LSTMCell(1024, 512)\n",
       "  (critic_linear): Linear(in_features=512, out_features=1, bias=True)\n",
       "  (actor_linear): Linear(in_features=512, out_features=4, bias=True)\n",
       "  (logsoftmax): LogSoftmax()\n",
@@ -219,34 +223,33 @@
     }
    ],
    "source": [
-    "    # Setup all constant\n",
-    "    setup('BreakoutDeterministic-v4')\n",
+    "# Setup all constant\n",
+    "setup('BreakoutDeterministic-v4')\n",
     "\n",
-    "    writer = SummaryWriter(comment=\"ppo_\" + ENV_ID)\n",
+    "writer = SummaryWriter(comment=\"ppo_\" + ENV_ID)\n",
     "\n",
-    "    # Autodetect CUDA\n",
-    "    use_cuda = torch.cuda.is_available()\n",
-    "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
-    "    print('Device:', device)\n",
+    "# Autodetect CUDA\n",
+    "use_cuda = torch.cuda.is_available()\n",
+    "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+    "print('Device:', device)\n",
     "\n",
-    "    # Prepare environments\n",
-    "    envs = [make_env(ENV_ID) for i in range(NUM_ENVS)]\n",
-    "    envs = SubprocVecEnv(envs)\n",
-    "    env = gym.make(ENV_ID)\n",
-    "    num_inputs = NUM_INPUTS #envs.observation_space\n",
-    "    num_outputs = NUM_OUTPUTS #envs.action_space\n",
+    "# Prepare environments\n",
+    "envs = [make_env(ENV_ID, TRANSFORM_CLASS) for i in range(NUM_ENVS)]\n",
+    "envs = SubprocVecEnv(envs)\n",
+    "env = gym.make(ENV_ID)\n",
+    "num_inputs = NUM_INPUTS #envs.observation_space\n",
+    "num_outputs = NUM_OUTPUTS #envs.action_space\n",
     "\n",
-    "    model_class = getattr(models, MODEL_NAME)\n",
-    "    model = model_class(num_inputs, num_outputs, hidden_size=HIDDEN_SIZE).to(device)\n",
-    "    print(model)\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "model = MODEL_CLASS(num_inputs, num_outputs, hidden_size=HIDDEN_SIZE).to(device)\n",
+    "print(model)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
-    "    frame_idx = 0\n",
-    "    train_epoch = 0\n",
-    "    best_reward = None\n",
+    "frame_idx = 0\n",
+    "train_epoch = 0\n",
+    "best_reward = None\n",
     "\n",
-    "    state = envs.reset()\n",
-    "    early_stop = False\n"
+    "state = envs.reset()\n",
+    "early_stop = False"
    ]
   },
   {
@@ -261,6 +264,24 @@
     "actions = []\n",
     "rewards = []\n",
     "masks = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = torch.FloatTensor(state).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist, value = model(state)"
    ]
   },
   {
