--- a/ppo/Untitled.ipynb
+++ b/ppo/Untitled.ipynb
@@ -28,6 +28,7 @@
     "import lib.model as models\n",
     "import lib.transforms as transforms\n",
     "from lib.multiprocessing_env import SubprocVecEnv\n",
+    "from lib.environment import atari_env\n",
     "\n",
     "def setup(env_id):\n",
     "\n",
@@ -68,7 +69,7 @@
     "        GAE_LAMBDA      = data.setdefault('gae_lambda', 0.95)\n",
     "        PPO_EPSILON     = data.setdefault('ppo_epsilon', 0.2)\n",
     "        CRITIC_DISCOUNT = data.setdefault('critic_discount', 0.5)\n",
-    "        ENTROPY_BETA    = data.setdefault('entropy_beta', 0.00)\n",
+    "        ENTROPY_BETA    = data.setdefault('entropy_beta', 0.001)\n",
     "        PPO_STEPS       = data.setdefault('ppo_steps', 256)\n",
     "        MINI_BATCH_SIZE = data.setdefault('mini_batch_size', 64)\n",
     "        PPO_EPOCHS      = data.setdefault('ppo_epochs', 10)\n",
@@ -88,12 +89,11 @@
     "        json_file.truncate()  # clear any tail of old content\n",
     "\n",
     "\n",
-    "def make_env(env_id, transform=None):\n",
+    "def make_env(env_id):\n",
     "    # returns a function which creates a single environment\n",
     "    def _thunk():\n",
-    "        env = gym.make(env_id)\n",
-    "        if transform:\n",
-    "            env = transform(env)\n",
+    "        #env = gym.make(env_id)\n",
+    "        env = atari_env(env_id)\n",
     "        return env\n",
     "    return _thunk\n",
     "\n",
@@ -107,7 +107,7 @@
     "\n",
     "        if isinstance(dist, torch.distributions.categorical.Categorical):\n",
     "            action = np.argmax(dist.probs.detach().cpu().numpy()) if deterministic \\\n",
-    "                else int(m.sample().cpu().numpy())\n",
+    "                else int(dist.sample().cpu().numpy())\n",
     "\n",
     "        elif isinstance(dist, torch.distributions.normal.Normal):\n",
     "            action = dist.mean.detach().cpu().numpy()[0] if deterministic \\\n",
@@ -155,7 +155,7 @@
     "    sum_entropy = 0.0\n",
     "    sum_loss_total = 0.0\n",
     "\n",
-    "    # PPO EPOCHS is the number of times we will go through ALL the training data to make updates\n",
+    "    # PPO EPOCHS is the number of times we will go through ALL the training data to make updates    \n",
     "    for _ in range(PPO_EPOCHS):\n",
     "        # grabs random mini-batches several times until we have covered all data\n",
     "        for state, action, old_log_probs, return_, advantage in ppo_iter(states, actions, log_probs, returns, advantages):\n",
@@ -204,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n",
+      "Device: cuda\n",
       "ActorCriticLSTM(\n",
       "  (conv1): Conv2d(1, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
       "  (maxp1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
@@ -223,33 +223,69 @@
     }
    ],
    "source": [
-    "# Setup all constant\n",
     "setup('BreakoutDeterministic-v4')\n",
-    "\n",
     "writer = SummaryWriter(comment=\"ppo_\" + ENV_ID)\n",
-    "\n",
     "# Autodetect CUDA\n",
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
     "print('Device:', device)\n",
-    "\n",
     "# Prepare environments\n",
-    "envs = [make_env(ENV_ID, TRANSFORM_CLASS) for i in range(NUM_ENVS)]\n",
+    "envs = [make_env(ENV_ID) for i in range(NUM_ENVS)]\n",
     "envs = SubprocVecEnv(envs)\n",
-    "env = gym.make(ENV_ID)\n",
+    "\n",
+    "env = atari_env(ENV_ID)\n",
+    "\n",
     "num_inputs = NUM_INPUTS #envs.observation_space\n",
     "num_outputs = NUM_OUTPUTS #envs.action_space\n",
-    "\n",
     "model = MODEL_CLASS(num_inputs, num_outputs, hidden_size=HIDDEN_SIZE).to(device)\n",
     "print(model)\n",
     "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "\n",
     "frame_idx = 0\n",
     "train_epoch = 0\n",
     "best_reward = None\n",
-    "\n",
     "state = envs.reset()\n",
-    "early_stop = False"
+    "early_stop = False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 1, 2, 0, 1, 1], device='cuda:0')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.3866, -1.3866, -1.3866, -1.3856, -1.3869, -1.3866, -1.3856, -1.3856],\n",
+       "       device='cuda:0', grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist.log_prob(action)"
    ]
   },
   {
@@ -263,7 +299,47 @@
     "states = []\n",
     "actions = []\n",
     "rewards = []\n",
-    "masks = []\n"
+    "masks = []\n",
+    "\n",
+    "for _ in range(PPO_STEPS):\n",
+    "    state = torch.FloatTensor(state).to(device)\n",
+    "    dist, value = model(state)\n",
+    "\n",
+    "    action = dist.sample()\n",
+    "    # each state, reward, done is a list of results from each parallel environment\n",
+    "    next_state, reward, done, _ = envs.step(action.cpu().numpy())\n",
+    "    log_prob = dist.log_prob(action)\n",
+    "\n",
+    "    log_probs.append(log_prob)\n",
+    "    values.append(value)\n",
+    "    rewards.append(torch.FloatTensor(reward).unsqueeze(1).to(device))\n",
+    "    masks.append(torch.FloatTensor(1 - done).unsqueeze(1).to(device))\n",
+    "\n",
+    "    states.append(state)\n",
+    "    actions.append(action)\n",
+    "\n",
+    "    state = next_state\n",
+    "    frame_idx += 1\n",
+    "\n",
+    "next_state = torch.FloatTensor(next_state).to(device)\n",
+    "_, next_value = model(next_state)\n",
+    "returns = compute_gae(next_value, rewards, masks,\n",
+    "                      values, GAMMA, GAE_LAMBDA)\n",
+    "\n",
+    "returns = torch.cat(returns).detach()\n",
+    "log_probs = torch.cat(log_probs).detach()\n",
+    "values = torch.cat(values).detach()\n",
+    "states = torch.cat(states)\n",
+    "actions = torch.cat(actions)\n",
+    "advantage = returns - values\n",
+    "advantage = normalize(advantage)\n",
+    "\n",
+    "# For Categorical distribution\n",
+    "if len(log_probs.size()) == 1:\n",
+    "    log_probs = log_probs.unsqueeze(dim=1)\n",
+    "\n",
+    "if len(actions.size()) == 1:\n",
+    "    actions = actions.unsqueeze(dim=1)\n"
    ]
   },
   {
@@ -272,7 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state = torch.FloatTensor(state).to(device)"
+    "for state, action, old_log_probs, return_, advantage in ppo_iter(states, actions, log_probs, returns, advantage):\n",
+    "    break"
    ]
   },
   {
@@ -286,56 +363,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _ in range(PPO_STEPS):\n",
-    "            state = torch.FloatTensor(state).to(device)\n",
-    "            dist, value = model(state)\n",
-    "\n",
-    "            action = dist.sample()\n",
-    "            # each state, reward, done is a list of results from each parallel environment\n",
-    "            next_state, reward, done, _ = envs.step(action.cpu().numpy())\n",
-    "            log_prob = dist.log_prob(action)\n",
-    "\n",
-    "            log_probs.append(log_prob)\n",
-    "            values.append(value)\n",
-    "            rewards.append(torch.FloatTensor(reward).unsqueeze(1).to(device))\n",
-    "            masks.append(torch.FloatTensor(1 - done).unsqueeze(1).to(device))\n",
-    "\n",
-    "            states.append(state)\n",
-    "            actions.append(action)\n",
-    "\n",
-    "            state = next_state\n",
-    "            frame_idx += 1"
+    "entropy = dist.entropy().mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "next_state = torch.FloatTensor(next_state).to(device)\n",
-    "_, next_value = model(next_state)\n",
-    "returns = compute_gae(next_value, rewards, masks,\n",
-    "                              values, GAMMA, GAE_LAMBDA)"
+    "new_log_probs = dist.log_prob(action.squeeze()).unsqueeze(dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [1.]], device='cuda:0', grad_fn=<ExpBackward>)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "returns = torch.cat(returns).detach()\n",
-    "log_probs = torch.cat(log_probs).detach()\n",
-    "values = torch.cat(values).detach()\n",
-    "states = torch.cat(states)\n",
-    "actions = torch.cat(actions)\n",
-    "advantage = returns - values\n",
-    "advantage = normalize(advantage)"
+    "ratio = (new_log_probs - old_log_probs).exp()\n",
+    "ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.5298],\n",
+       "        [-0.5028],\n",
+       "        [-0.5130],\n",
+       "        [-0.4615]], device='cuda:0', grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surr1 = ratio * advantage\n",
+    "surr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.5298],\n",
+       "        [-0.5028],\n",
+       "        [-0.5130],\n",
+       "        [-0.4615]], device='cuda:0', grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clip_param=0.2\n",
+    "surr2 = torch.clamp(ratio, 1.0 - clip_param, 1.0 + clip_param) * advantage\n",
+    "surr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.5017, device='cuda:0', grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.min(surr1, surr2).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0006, device='cuda:0', grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(return_ - value).pow(2).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0362],\n",
+       "        [0.0327],\n",
+       "        [0.0328],\n",
+       "        [0.0321]], device='cuda:0', grad_fn=<AddmmBackward>)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value"
    ]
   },
   {
@@ -375,197 +552,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from torch.distributions import Categorical"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = Categorical(torch.tensor([ 0.10, 0.20, 0.30, 0.40 ]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = Normal(0,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.distributions.normal.Normal"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "action = m.sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(3)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "action"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.9163)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.log_prob(action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.1000, 0.2000, 0.3000, 0.4000])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.probs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-2.3026, -1.6094, -1.2040, -0.9163])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.logits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.4000)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.log_prob(action).exp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(m.sample().cpu().numpy())"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
